objects/Payroll__c.object
<CustomObject><fields>
        <fullName>ACF_Address_Locator__c</fullName>
        <inlineHelpText>Address to which payment will be sent</inlineHelpText>
        <label>Address Locator</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Compensation_Description__c</fullName>
        <label>Compensation Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Course_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Course Release</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Employee_ID__c</fullName>
        <formula>ACF_Faculty_Agreement__r.ACF_Faculty__r.Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Expected_Compensation_Date__c</fullName>
        <label>Expected Compensation Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Faculty_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Faculty Agreement</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Payroll</relationshipLabel>
        <relationshipName>Payroll</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Faculty__c</fullName>
        <formula>ACF_Faculty_Agreement__r.ACF_Faculty__r.FirstName + " " + ACF_Faculty_Agreement__r.ACF_Faculty__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Faculty</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Form_1099__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form 1099?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Payroll</relationshipLabel>
        <relationshipName>Payroll</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If True, this payroll record is locked and cannot be changed.</inlineHelpText>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Payee_Address__c</fullName>
        <formula>IF(
AND (ISPICKVAL(ACF_Address_Locator__c, "Business") ,  
     ISPICKVAL(ACF_Faculty_Agreement__r.ACF_Faculty__r.hed__Primary_Address_Type__c, "Work")),
    ACF_Faculty_Agreement__r.ACF_Faculty__r.MailingStreet &amp;  BR() &amp;    
    ACF_Faculty_Agreement__r.ACF_Faculty__r.MailingCity &amp; " " &amp; 
    ACF_Faculty_Agreement__r.ACF_Faculty__r.MailingState &amp; " " &amp;
    ACF_Faculty_Agreement__r.ACF_Faculty__r.MailingPostalCode &amp;  BR() &amp;
    ACF_Faculty_Agreement__r.ACF_Faculty__r.MailingCountry, 
IF (
 AND (ISPICKVAL(ACF_Address_Locator__c, "Business") ,  
     ISPICKVAL((ACF_Faculty_Agreement__r.ACF_Faculty__r.hed__Secondary_Address_Type__c), "Work")),
    ACF_Faculty_Agreement__r.ACF_Faculty__r.OtherStreet &amp;  BR() &amp;    
    ACF_Faculty_Agreement__r.ACF_Faculty__r.OtherCity &amp; " " &amp; 
    ACF_Faculty_Agreement__r.ACF_Faculty__r.OtherState &amp; " " &amp;
    ACF_Faculty_Agreement__r.ACF_Faculty__r.OtherPostalCode &amp;  BR() &amp;
    ACF_Faculty_Agreement__r.ACF_Faculty__r.OtherCountry,
IF(
AND (ISPICKVAL(ACF_Address_Locator__c, "Home") ,  
     ISPICKVAL(ACF_Faculty_Agreement__r.ACF_Faculty__r.hed__Primary_Address_Type__c, "Home")),
    ACF_Faculty_Agreement__r.ACF_Faculty__r.MailingStreet &amp;  BR() &amp;    
    ACF_Faculty_Agreement__r.ACF_Faculty__r.MailingCity &amp; " " &amp; 
    ACF_Faculty_Agreement__r.ACF_Faculty__r.MailingState &amp; " " &amp;
    ACF_Faculty_Agreement__r.ACF_Faculty__r.MailingPostalCode &amp;  BR() &amp;
    ACF_Faculty_Agreement__r.ACF_Faculty__r.MailingCountry, 
IF (
 AND (ISPICKVAL(ACF_Address_Locator__c, "Home") ,  
     ISPICKVAL((ACF_Faculty_Agreement__r.ACF_Faculty__r.hed__Secondary_Address_Type__c), "Home")),
    ACF_Faculty_Agreement__r.ACF_Faculty__r.OtherStreet &amp;  BR() &amp;    
    ACF_Faculty_Agreement__r.ACF_Faculty__r.OtherCity &amp; " " &amp; 
    ACF_Faculty_Agreement__r.ACF_Faculty__r.OtherState &amp; " " &amp;
    ACF_Faculty_Agreement__r.ACF_Faculty__r.OtherPostalCode &amp;  BR() &amp;
    ACF_Faculty_Agreement__r.ACF_Faculty__r.OtherCountry, 
IF(
AND (ISPICKVAL(ACF_Address_Locator__c, "Other") ,  
     ISPICKVAL(ACF_Faculty_Agreement__r.ACF_Faculty__r.hed__Primary_Address_Type__c, "Other")),
    ACF_Faculty_Agreement__r.ACF_Faculty__r.MailingStreet &amp;  BR() &amp;    
    ACF_Faculty_Agreement__r.ACF_Faculty__r.MailingCity &amp; " " &amp; 
    ACF_Faculty_Agreement__r.ACF_Faculty__r.MailingState &amp; " " &amp;
    ACF_Faculty_Agreement__r.ACF_Faculty__r.MailingPostalCode &amp;  BR() &amp;
    ACF_Faculty_Agreement__r.ACF_Faculty__r.MailingCountry, 
IF (
 AND (ISPICKVAL(ACF_Address_Locator__c, "Other") ,  
     ISPICKVAL((ACF_Faculty_Agreement__r.ACF_Faculty__r.hed__Secondary_Address_Type__c), "Other")),
    ACF_Faculty_Agreement__r.ACF_Faculty__r.OtherStreet &amp;  BR() &amp;    
    ACF_Faculty_Agreement__r.ACF_Faculty__r.OtherCity &amp; " " &amp; 
    ACF_Faculty_Agreement__r.ACF_Faculty__r.OtherState &amp; " " &amp;
    ACF_Faculty_Agreement__r.ACF_Faculty__r.OtherPostalCode &amp;  BR() &amp;
    ACF_Faculty_Agreement__r.ACF_Faculty__r.OtherCountry,
"Error: Payroll/Address Location or Contact/Preferred Address not specified"))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payee Address</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Pivotal_ID__c</fullName>
        <externalId>true</externalId>
        <label>Pivotal ID</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>ACF_Total_Compensation__c</fullName>
        <formula>ACF_Faculty_Agreement__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Compensation (Calc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>ACF_US_Citizen__c</fullName>
        <formula>ACF_Faculty_Agreement__r.ACF_Faculty__r.ACF_US_Citizen__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>US Citizen?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_View__c</fullName>
        <formula>HYPERLINK("/"+Id, "View")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Void__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Void</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Adjunct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adjunct</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>GL_Account2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a test to see if I can relate GL Account (on Payroll) to GL Acct# on the Opportunity record</description>
        <label>GL Account2</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Payroll (GL Account2)</relationshipLabel>
        <relationshipName>Payroll1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>GL_Account_Relationship__c</fullName>
        <formula>GL_Account2__r.GL_Acct_Num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Account Relationship</label>
        <type>Text</type>
    </fields><fields>
        <fullName>New_GL_Account_Field__c</fullName>
        <formula>ACF_Faculty_Agreement__r.GL_Acct_Num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New GL Account Field</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Offering__c</fullName>
        <label>Offering</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordType.Id</field>
                <operation>equals</operation>
                <value>012360000012HL6</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Payroll</relationshipLabel>
        <relationshipName>Payroll</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Payroll</label><nameField>
        <displayFormat>P-{000000000}</displayFormat>
        <label>Payroll ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Payroll</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>ACF_View__c</columns>
        <columns>ACF_Faculty__c</columns>
        <columns>ACF_Faculty_Agreement__c</columns>
        <columns>ACF_Expected_Compensation_Date__c</columns>
        <columns>ACF_Total_Compensation__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ACF_GL_Account__c</columns>
        <columns>Offering__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Locked_payroll</fullName>
        <columns>ACF_View__c</columns>
        <columns>ACF_Faculty__c</columns>
        <columns>ACF_Faculty_Agreement__c</columns>
        <columns>ACF_Expected_Compensation_Date__c</columns>
        <columns>ACF_Total_Compensation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Payroll__c.Locked</value>
        </filters>
        <label>Locked Payroll</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Payroll_to_be_paid_next_cycle</fullName>
        <columns>ACF_View__c</columns>
        <columns>ACF_Faculty__c</columns>
        <columns>ACF_Faculty_Agreement__c</columns>
        <columns>ACF_Total_Compensation__c</columns>
        <columns>ACF_Expected_Compensation_Date__c</columns>
        <columns>ACF_Lock__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Payroll__c.Unlocked</value>
        </filters>
        <filters>
            <field>ACF_Expected_Compensation_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Payroll to be paid next cycle</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Unlocked_payroll</fullName>
        <columns>ACF_View__c</columns>
        <columns>ACF_Faculty__c</columns>
        <columns>ACF_Faculty_Agreement__c</columns>
        <columns>ACF_Expected_Compensation_Date__c</columns>
        <columns>ACF_Total_Compensation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Payroll__c.Unlocked</value>
        </filters>
        <label>Unlocked Payroll</label>
        <language>en_US</language>
    </listViews><recordTypes>
        <fullName>Locked</fullName>
        <active>true</active>
        <label>Locked</label>
    </recordTypes><recordTypes>
        <fullName>Unlocked</fullName>
        <active>true</active>
        <label>Unlocked</label>
    </recordTypes></CustomObject>